...
import { Grow, Row } from "../../../util/Flex";
import { Spacer } from "../../../util/Spacer";
import { useSearchParam } from "react-use";

const { H1, Text } = Typography;

export const Login = () => {
  const { login, mutationLoading, error, meta, resendVerificationEmail } =
    useAuth();
  const [email, setEmail] = useState("");
  const [password, setPassword] = useState("");

  const from = useSearchParam("from");
...
            placeholder="Email"
            name="email"
            onInput={setEmail}
            value={email}
          />
          <Input
            label="Password"
            placeholder="Password"
            type="password"
            name="password"
            onInput={setPassword}
            value={password}
          />
...
