...
        </Alert>
      )} */}
      {value && (
        <Alert
          variant="success"
          className="mb-3"
          title="Existing File"
          data-cy={alertCyId}
        >
          <Typography.Text>A file is uploaded for this field.</Typography.Text>
          <img
            src={value.url || value.location}
            style={{ maxWidth: 200, maxHeight: 100 }}
...
