name: Create Event
seedFile: fixtures/db/login.sql
steps:
  - setViewport:
      width: 1280
      height: 720
  - open: /
  - authenticateUser:
      email: test@eventpilot-test.com
      password: Password
  - open: /events
  - waitFor: 100
  # Create event
  - tapOn:
      dataCy: create-event
      exact: false
  - waitFor: 500
  - typeText:
      text: "Test Event"
      placeholder: Event Name
  - typeText:
      text: "Test Description"
      placeholder: Event Description
  - typeText:
      text: "test-event"
      placeholder: Enter slug
  - tapOn:
      text: "Select a default timezone"
      exact: false
  - typeText:
      text: "eastern"
      placeholder: Search...
  - tapOn:
      text: "Eastern Time (US & Canada)"
      exact: false
  - tapOn:
      dataCy: next
  - assertVisible:
      text: "instance"
      exact: false
  - typeText:
      text: "Test Instance"
      placeholder: "Instance Name"
      exact: false
  - typeText:
      selector: "[data-cy='Start Date-date']"
      text: "2028-10-10"
  - typeText:
      selector: "[data-cy='Start Date-time']"
      text: "06:00"
  - typeText:
      selector: "[data-cy='End Date-date']"
      text: "2028-10-11"
  - typeText:
      selector: "[data-cy='End Date-time']"
      text: "12:00"
  - tapOn:
      dataCy: next
  - assertVisible:
      text: "Add contact information for your event. You can change this at any time in the future."
      exact: false
  - tapOn:
      text: "Use the email you use to log in"
      exact: false
  - tapOn:
      text: "Connect an existing Google account"
      exact: false
  - tapOn:
      dataCy: next
  - assertVisible:
      text: "Event Assets"
  - selectFile:
      selector: "input[data-cy='logo']"
      filePath: "cypress/fixtures/files/logo.png"
  - assertContains:
      selector: "[data-cy='logo-alert']"
      text: "Existing File"
  - selectFile:
      selector: "input[data-cy='banner']"
      filePath: "cypress/fixtures/files/banner.png"
  - assertContains:
      selector: "[data-cy='banner-alert']"
      text: "Existing File"
  - tapOn:
      dataCy: next
  - assertVisible:
      text: "Billing"
  - waitFor: 5000
  ##############################################################################
  - fillStripeElementsInput:
      field: number
      value: "4242424242424242"
  - fillStripeElementsInput:
      field: expiry
      value: "429" # 4/29
  - fillStripeElementsInput:
      field: cvc
      value: "123"
  - fillStripeElementsInput:
      field: postalCode
      value: "12345"
  - tapOn:
      text: "Add payment method"
      allowScroll: true
  - assertVisible: "Payment method added"
  - assertVisible: "A payment method has been added. You can proceed to the next step."
  - assertVisible: "Replace card"
  - tapOn:
      dataCy: next
  - tapOn:
      dataCy: next
  - tapOn:
      text: "Create Event"
  - waitFor: 3000
  - assertVisible:
      text: "This is your event homepage."
      allowScroll: true
  - assertEventChargedAmount:
      slug: test-event
      amount: 200
